# ai-best-practices

./: .gitignore  chat_completion.py
llm_factory/: pyproject.toml
llm_factory/llm_factory/: llm_factory.py
llm_factory/llm_factory/config/: anthropic_settings.py  llm_provider_settings.py  openai_settings.py  settings.py
llm_factory/llm_factory/model/: llm_client.py
